--- a/src/Pages/AboutUs/components/start.module.css
+++ b/src/Pages/AboutUs/components/start.module.css
@@ -254,8 +254,13 @@
         left: 0;
         margin: 0vh;
         /* background-color: black; */
-        width: 100%;
+        width: 81%;
         text-align: center;
+        /* background: #000000f0; */
+        margin-left: 31px;
+        /* margin-right: 49px; */
+        backdrop-filter: blur(10px);
+        z-index: 15;
     }
     .logo {
         display: none;
@@ -284,6 +289,7 @@
         height: 55%;
         width: 86vw;
         position: absolute;
+        backdrop-filter: blur(10px);
     }
     .p2{
         text-align: center;
@@ -295,7 +301,8 @@
     }
 
     .svideo {
-        height: 22%;
+        height: 25%;
+        left: 84vw;
     }
 
     .ima {
@@ -316,11 +323,15 @@
 
 @media screen and (max-width: 376px) {
     .text {
-        margin-top: 12vh;
+        margin-top: 7vh;
         margin-bottom: 3vh;
     }
     .p2{
-        text-align: initial;
+        text-align: center;
+    }
+    .svideo {
+        height: 26%;
+        left: 87vw;
     }
 }
 
@@ -345,6 +356,20 @@
 @media screen and (min-width:550px) and (max-width:780px){
     .p2{
         font-size: 10px;
+
+    }
+}
+
+@media screen and (max-width:321px){
+    .ima{
+        height: 20vh;
+        width: 231px;
+    }
+    .text{
+        margin-top: 12vh;
+    }
+    .svideo{
+        height: 29%;
     }
 }
 
