--- a/src/Pages/Events/components/bg.module.css
+++ b/src/Pages/Events/components/bg.module.css
@@ -1,20 +1,47 @@
 @font-face {
     font-family: aboutfont;
     src: url(../assets/DMMono-Regular.ttf);
-
 }
-.p1{
+
+.grid{
+    display:grid;
+    place-content:centre;
+    /* position: absolute;
+    overflow:clip; */
+    height:100vh;
+    width:100vw;
+}
+
+.peel{
+    height:200vh;
+    width:100vw;
+    grid-area:1/1;
+    z-index:10;
+    background-color:black;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    
+    top:0;
+}
+
+.sticky{
+    grid-area:1/1;
+    position: fixed;
+}
+
+.mainBgContainer{
+
+    grid-area:1/1;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+    z-index: 10;
 }
 body{
 
     background-color: #1e1e1e;
-    /* font-family: aboutfont; */
+    font-family: aboutfont;
 }
 .parent{
     display: flex;
@@ -22,13 +49,21 @@ body{
 .heading{
     padding-bottom: 14px;
 }
+.bgcontainer{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
 /* .heading2{
     left:0px;
     transform: rotate(90deg);
     color:white;
 } */
 .text{
-top:-7px;
+top:3px;
 left:50px;
 color:white;
 position: absolute;
@@ -39,7 +74,7 @@ font-family: aboutfont;
 
 .left{
     width: calc(50vw - 15px);
-    position: fixed;
+    position: relative;
     height: 100vh;
     left: 0px;
     /* padding-right: 25px; */
@@ -48,7 +83,7 @@ font-family: aboutfont;
 }
 .right{
     width: calc(50vw - 15px);
-    position: fixed;
+    position: absolute;
     height: 100vh;
     right: 0px;
     transform: rotateY(180deg);
@@ -243,7 +278,42 @@ font-family: aboutfont;
         width:96%;
     }
 }
-@media screen and (max-width: 768px){
+/* @media screen and (min-width: 769px) and (max-width: 1000px) {
+    .v2{
+        left: 95.5vw;
+    }
+    .v3{
+        display: none;
+    }
+    .text{
+        left:26px;
+        top: 2vh;
+        font-size: 13px;
+    }
+    .h1{
+        width: 93.2vw;
+        bottom: 5vh;
+    }
+    .h2{
+        width: 91vw;
+    }
+    .h3{
+        width: 91vw;
+    }
+    .right{
+        display: none;
+    }
+    .bluetext{
+        left: 5vh;
+    }
+    .rotatedText{
+        font-size: 13px;
+    }
+    .rotatedTextContainer{
+        left: 0.2vh;
+    }
+} */
+@media screen and (max-width: 900px){
     .h1{
         width:94.5%;
     }
@@ -254,17 +324,39 @@ font-family: aboutfont;
         width:94.5%;
     }
 }
-@media screen and (max-width: 425px){
+@media screen and (max-width: 550px){
     .v2{
-        right:-13px;
+        left: 95.5vw;
     }
     .v3{
-        right:0px;
+        display: none;
     }
     .text{
         left:26px;
-        top:-6px;
+        top: 2vh;
         font-size: 13px;
+    }
+    .h1{
+        width: 91vw;
+        bottom: 5vh;
+    }
+    .h2{
+        width: 91vw;
+    }
+    .h3{
+        width: 91vw;
+    }
+    .right{
+        display: none;
+    }
+    .bluetext{
+        left: 5vh;
+    }
+    .rotatedText{
+        font-size: 13px;
+    }
+    .rotatedTextContainer{
+        left: 0.2vh;
     }
 }
 @media screen and (max-width:320px){
@@ -276,7 +368,7 @@ font-family: aboutfont;
     }
     .text{
         left:26px;
-        top:-5px;
+        top:7px;
         font-size:11px;
     }
 }
