--- a/src/Pages/Alumni/Style/card.module.css
+++ b/src/Pages/Alumni/Style/card.module.css
@@ -18,7 +18,7 @@ html {
 body {
   width: 100vw;
   min-height: 100vh;
-  background-color: #f0f0f0;
+  
   font-family: dmMono;
   display: flex;
   justify-content: center;
@@ -31,6 +31,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+
 }
 
 .box {
@@ -75,6 +76,7 @@ body {
   display: flex;
   justify-content: center;
   background-color: #fff;
+  /* border: 2px solid white; */
   z-index: 1;
   font-family: dmMono;
   align-items: flex-end;
@@ -118,19 +120,272 @@ body {
   }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1500px) {
   .content span {
     color: #555;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 300;
     letter-spacing: 2px;
   }
+
+  .content h2 {
+    display: block;
+    font-size: 1.5rem;
+    color: #111;
+    font-weight: 1000;
+    line-height: 2rem;
+    letter-spacing: 1px;
+  }
+
+  .linkedin {
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: middle;
+  }
+
+  .linkedin img {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .box {
+    position: relative;
+    width: 25rem;
+    height: 35rem;
+    margin: 4rem;
+  }
+  
+  .box:hover .imgBox {
+    transform: translate(-1rem, -3rem);
+  }
+  
+  .box:hover .content {
+    transform: translate(0.5rem, 3.5rem);
+  }
+
+  .imgBox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .imgBox img {
+    width: 25rem;
+    height: 35rem;
+    object-fit: cover;
+    resize: both;
+  }
+  
+  .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    /* border: 2px solid white; */
+    z-index: 1;
+    font-family: dmMono;
+    align-items: flex-end;
+    text-align: center;
+    transition: 0.5s ease-in-out;
+  }
 }
-@media (max-width: 1300px) {
+
+
+@media (max-width: 1200px) {
   .content span {
     color: #555;
     font-size: 1rem;
     font-weight: 200;
     letter-spacing: 2px;
+  }
+
+}
+
+@media (max-width: 550px) {
+  .content span {
+    color: #555;
+    font-size: 1rem;
+    font-weight: 200;
+    letter-spacing: 2px;
+  }
+
+  .content h2 {
+    display: block;
+    font-size: 1.2rem;
+    color: #111;
+    font-weight: 1000;
+    line-height: 2rem;
+    letter-spacing: 1px;
+  }
+
+  .linkedin {
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: middle;
+  }
+
+  .linkedin img {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
+
+  .container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 250px;
+    margin-left: 70px;
+  }
+
+
+  .box {
+    position: relative;
+    width: 25rem;
+    height: 35rem;
+    margin: 4rem;
+  }
+  
+  .box:hover .imgBox {
+    transform: translate(-1rem, -3rem);
+  }
+  
+  .box:hover .content {
+    transform: translate(0.5rem, 3.5rem);
+  }
+
+  .imgBox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .imgBox img {
+    width: 25rem;
+    height: 35rem;
+    object-fit: cover;
+    resize: both;
+  }
+  
+  .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 25rem;
+    height: 35rem;
+    padding: 1.5rem;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    /* border: 2px solid white; */
+    z-index: 1;
+    font-family: dmMono;
+    align-items: flex-end;
+    text-align: center;
+    transition: 0.5s ease-in-out;
+  }
+}
+
+@media (max-width: 400px) {
+  .content span {
+    color: #555;
+    font-size: 0.7rem;
+    font-weight: 200;
+    letter-spacing: 2px;
+  }
+
+  .content h2 {
+    display: block;
+    font-size: 1rem;
+    color: #111;
+    font-weight: 1000;
+    line-height: 2rem;
+    letter-spacing: 1px;
+  }
+
+  .linkedin {
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: middle;
+  }
+
+  .linkedin img {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  .container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 250px;
+    margin-left: 70px;
+  }
+
+
+  .box {
+    position: relative;
+    width: 20rem;
+    height: 30rem;
+    margin: 4rem;
+  }
+  
+  .box:hover .imgBox {
+    transform: translate(-1rem, -3rem);
+  }
+  
+  .box:hover .content {
+    transform: translate(0.5rem, 3.5rem);
+  }
+
+  .imgBox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .imgBox img {
+    width: 20rem;
+    height: 30rem;
+    object-fit: cover;
+    resize: both;
+  }
+  
+  .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20rem;
+    height: 30rem;
+    padding: 1.5rem;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    /* border: 2px solid white; */
+    z-index: 1;
+    font-family: dmMono;
+    align-items: flex-end;
+    text-align: center;
+    transition: 0.5s ease-in-out;
   }
 }
