--- a/src/Pages/Alumni/Style/yearSelector.module.css
+++ b/src/Pages/Alumni/Style/yearSelector.module.css
@@ -5,7 +5,8 @@
 
 .yearDiv {
   position: fixed;
-  top: 10vh;
+  top: 50%;
+  transform: translateY(-50%);
   right: 20px;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -22,10 +23,9 @@
   border: 2px solid #465058;
   color: #FFFFFF;
   font-family: dmMono;
-  cursor: pointer; 
-  display: flex;           
-  align-items: center;      
-  justify-content: center;  
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px; /* Add space between buttons */
 }
-
-
