--- a/src/Pages/AboutUs/components/projects.module.css
+++ b/src/Pages/AboutUs/components/projects.module.css
@@ -44,6 +44,7 @@
     color: #8f8a84;
     width: 88.5%;
     margin-left: 75px;
+    cursor: pointer;
 }
 .projectHeading p{
     font-size: 2.5rem;
@@ -51,11 +52,16 @@
     margin-left: 32px;
     
 }
-.projectHeading p:hover{
-    /* font-size: 2.5rem; */
+.projectHeading p:active{
     color: white;
 }
-
+.projectHeading p:hover{
+    
+    color: white;
+}
+.whiteText{
+    color: white;
+}
 .projecth{
     height: 20%;
     display: flex;
@@ -161,11 +167,13 @@
         /* height: 50vh; */
     }
 
+    .projectlink:hover{
+        text-decoration: underline;
+    }
     .active .accordionContent {
         display: block;
         
     }
-
     @keyframes fadeIn {
         from { opacity: 0; }
         to { opacity: 1; }
