--- a/src/Components/NavbarI/NavbarI.css
+++ b/src/Components/NavbarI/NavbarI.css
@@ -12,7 +12,8 @@ nav {
     gap: 2rem;
     backdrop-filter: blur(15px);
     border-radius: 50px;
-    border: 1px solid #ea638c;
+    /* border: 1px solid #ea638c; */
+    border: 1px solid #0078d4;
 }
 
 nav a {
@@ -29,11 +30,13 @@ nav a:hover {
 nav a.active {
     color: white;
     border-radius: 50%;
-    background-color: #ea638c;
+    /* background-color: #ea638c; */
+    background-color: #0078d4;
 }
 
 .active1 {
-    background-color: #ea638c;
+    /* background-color: #ea638c; */
+    background-color: #0078d4;
 }
 
 .show-on-phone {
@@ -53,7 +56,8 @@ nav a.active {
     left: -36px;
     z-index: 1;
     border-radius: 10px;
-    border: 1px solid #ea638c;
+    /* border: 1px solid #ea638c; */
+    border: 1px solid #0078d4;
     background: #4c4b4b69;
 }
 
