added responsive to logo animation

--- a/src/Pages/AboutUs/components/logoani.module.css
+++ b/src/Pages/AboutUs/components/logoani.module.css
@@ -5,3 +5,17 @@
   position: fixed;
   z-index: 100000;
 }
+
+.image{
+  height: 250px;
+}
+
+@media screen and (max-width: 768px){
+  .image{
+    height: 150px;
+  }
+  .mlsclogo {
+    top: 39vh;
+    left: 9vw;
+  }
+}
