reworked gallery page made

--- a/src/Pages/Events/components/Event.module.css
+++ b/src/Pages/Events/components/Event.module.css
@@ -61,8 +61,8 @@
   border: 2px solid white;
   height:40vh;
   width:60%;
-  /* margin-bottom:5vh;
-  margin-left:5vh; */
+  margin-bottom:5vh;
+  margin-left:5vh;
 }
 
 .image {
