--- a/src/Pages/Events/components/Event.module.css
+++ b/src/Pages/Events/components/Event.module.css
@@ -59,19 +59,74 @@
 .picborder{
   position: absolute;
   border: 2px solid white;
-  height:40vh;
+  height:10vw;
   width:60%;
-  margin-bottom:5vh;
-  margin-left:5vh;
 }
 
 .image {
   z-index: 0;
   height: 40vh;
   width: 60%;
-  /* margin-top: 5vh;
-  margin-right: 5vh; */
+  margin-top: 5vh;
+  margin-right: 5vh;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popupContent {
+  background-color: blue;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  width: 300px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
+@media screen and (max-width: 550px){
+
+  .Event_container{
+    flex-direction: column;
+  }
+
+  /* .sideone{
+    padding-top: 20vh;
+  } */
+  
+  .sidetwo{
+    padding-top: -20vh;
+  }
+
+  .picborder{
+    height: 45vw;
+  }
 }
