--- a/src/Pages/Events/components/bg.module.css
+++ b/src/Pages/Events/components/bg.module.css
@@ -12,17 +12,6 @@
     width:100vw;
 }
 
-.peel{
-    height:200vh;
-    width:100vw;
-    grid-area:1/1;
-    z-index:10;
-    background-color:black;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    
-    top:0;
-}
-
 .sticky{
     grid-area:1/1;
     position: fixed;
@@ -37,6 +26,7 @@
     width: 100vw;
     height: 100vh;
     z-index: 10;
+    pointer-events: none ;
 }
 body{
 
@@ -56,6 +46,7 @@ body{
     width: 100%;
     height: 100%;
     z-index: 0;
+    pointer-events: none;
 }
 /* .heading2{
     left:0px;
@@ -314,14 +305,38 @@ font-family: aboutfont;
     }
 } */
 @media screen and (max-width: 900px){
+    .v2{
+        left: 95.5vw;
+    }
+    .v3{
+        display: none;
+    }
+    .text{
+        left:26px;
+        top: 2vh;
+        font-size: 13px;
+    }
     .h1{
-        width:94.5%;
+        width: 93vw;
+        bottom: 5vh;
     }
     .h2{
-        width:94.5%;
+        width: 93vw;
     }
     .h3{
-        width:94.5%;
+        width: 91vw;
+    }
+    .right{
+        display: none;
+    }
+    .bluetext{
+        left: 5vh;
+    }
+    .rotatedText{
+        font-size: 13px;
+    }
+    .rotatedTextContainer{
+        left: 0.2vh;
     }
 }
 @media screen and (max-width: 550px){
