changes in about and team

--- a/src/Pages/OurTeam/Style/ourteam.module.css
+++ b/src/Pages/OurTeam/Style/ourteam.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   /* margin-top: 5rem; */
   min-height: 100vh;
-  background-color: black;
+  background-color: #1E1E1E;
   margin-bottom: 180px;
   overflow: hidden;
   animation: fadeIn 1s;
