--- a/src/Pages/AboutUs/components/bg.module.css
+++ b/src/Pages/AboutUs/components/bg.module.css
@@ -17,7 +17,7 @@
     width:100vw;
     grid-area:1/1;
     z-index:10;
-    background-color:black;
+    background-color:#1e1e1e;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     
     top:0;
