--- a/src/Pages/LandingPage/styles/home.module.css
+++ b/src/Pages/LandingPage/styles/home.module.css
@@ -12,6 +12,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    background-color: black;
 }
 .polygon{
     height: 100vh;
