--- a/components/Chatbot/chatbot.module.css
+++ b/components/Chatbot/chatbot.module.css
@@ -9,8 +9,8 @@
     align-items: center;
     cursor: pointer;
     position: fixed;
-    top: 10px;
-    right: 10px;
+    bottom: 15px;
+    right: 70px;
     z-index: 10;
 }
 
